# NomaanOS

./: .gitignore  LICENSE  README.md  debug_nomaanos.sh  nomaan.py  nomaan.py.bak  setup.cfg  test_info.py
.github/workflows/: nomaanos-ci.yml
scripts/: auto_backup.sh  hello.sh  install_nomaanos.sh
src/nomaanos/: __init__.py  __main__.py  config.py  core.py  modules.py  runner.py
src/nomaanos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nomaanos/modules/: __init__.py  hello.py  runner.py  sysinfo.py
