[metadata]
name = nomaanos
version = 0.2
author = NomaanOS
description = Personal OS-like CLI environment
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.entry_points]
console_scripts =
    nomaanos = nomaanos:main

[options.packages.find]
where = src
